--- a/reg_cal.qmd
+++ b/reg_cal.qmd
@@ -36,7 +36,7 @@ table(subset_nhanes$cc_diabetes)
 Before starting with regression calibration, we first want to see what a model that only uses our noisy data looks like. We'll use the same model formula as before (including age, race, smoking status etc.), the only difference being that we will use our error-full data, specifically the low reliability case.
 
 ```{r}
-naive.model=glm(cc_diabetes ~ bp_sys_mean_noise_low, family="binomial", data=subset_nhanes)
+naive.model=glm(cc_diabetes ~ bp_sys_mean_noise_low + demo_age_years + demo_race + demo_gender+ cc_bmi + bp_med_use, family="binomial", data=subset_nhanes)
 summary(naive.model)
 knitr::kable(tidy(naive.model, exponentiate = TRUE, conf.int = TRUE), digits = 3)
 ```
@@ -48,7 +48,7 @@ Looking at the summary above, the significant coefficients, and therefore the va
 Next, we'll look at our "true" model, the model which uses our unbiased, non-error blood pressure values:
 
 ```{r}
-true.model=glm(cc_diabetes ~ bp_sys_mean, family="binomial", data=subset_nhanes)
+true.model=glm(cc_diabetes ~ bp_sys_mean + demo_age_years + demo_race + demo_gender+ cc_bmi +  bp_med_use, family="binomial", data=subset_nhanes)
 summary(true.model)
 knitr::kable(tidy(true.model, exponentiate = TRUE, conf.int = TRUE), digits = 3)
 ```
@@ -59,14 +59,19 @@ For this subset of the data, the true beta value for the systolic mean is ... Th
 
 ```{r}
 #Create a model with predicts the true BP value based on the noisy BP data
-rcfit<-lm(bp_sys_mean ~ bp_sys_mean_noise_low, data=subset_nhanes)
+rcfit<-lm(bp_sys_mean ~ bp_sys_mean_noise_low + demo_age_years + demo_race + demo_gender+ cc_bmi + bp_med_use, data=subset_nhanes)
 summary(rcfit)
 subset_nhanes$bp_hat <- predict(rcfit, newdata=subset_nhanes) 
 
-final.model = glm(cc_diabetes ~ bp_hat, family="binomial",data=subset_nhanes)
+final.model = glm(cc_diabetes ~ bp_hat + demo_age_years + demo_race + demo_gender+ cc_bmi + cc_smoke + bp_med_use, family="binomial",data=subset_nhanes)
 summary(final.model)
 knitr::kable(tidy(final.model, exponentiate = TRUE, conf.int = TRUE), digits = 3)
 
+```
+
+```{r}
+diabetes_test <- t.test(bp_hat ~ cc_diabetes, data = subset_nhanes)
+diabetes_test
 ```
 
 ```{r}
@@ -87,7 +92,7 @@ bootstrap.functionV2<-function(dat,inds){
 	return(final.model$coef)
 }
 
-my.boot<-boot(subset_nhanes, bootstrap.functionV2, R=1000)
+my.boot<-boot(subset_nhanes, bootstrap.functionV2, R=2000)
 bsSD <- apply(my.boot$t,2,sd)
 bsSD
 
