--- a/intro.qmd
+++ b/intro.qmd
@@ -1,9 +1,17 @@
 # Introduction
 
-This is a book created from markdown and executable code.
+This tutorial is still undergoing construction (last updated February 2025)
 
-See @knuth84 for additional discussion of literate programming.
+## Learning Objectives
 
-```{r}
-1 + 1
-```
+1.  To understand what measurement error is.
+
+2.  To review the effects of measurement error in statistical analysis.
+
+3.  To understand the process for assessing measurement error in data.
+
+4.  To learn how to apply statistical methods to correct for measurement error.
+
+## Overall Goal
+
+To reduce bias in statistical analyses in blood pressure measures.
